fix: fix profile menu behind point card

--- a/src/components/ProfileMenu/index.scss
+++ b/src/components/ProfileMenu/index.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   justify-content: flex-end;
+
   &-container {
     &__avatar {
       cursor: pointer;
@@ -30,13 +31,14 @@
 
     &__menu {
       position: absolute !important;
+      z-index: 99;
+
       width: 220px;
       left: -70px;
       top: 50px;
       background-color: #fff;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       border-radius: 10px;
-
       a {
         color: #000;
       }
